Cleaned up the security manager configuration in surefire plugin